--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowActivity.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowActivity.java.vm
@@ -190,6 +190,13 @@ public class ShadowActivity extends ShadowContextThemeWrapper {
     finishWasCalled = true;
   }
 
+#if ($api >= 21)
+  @Implementation
+  public void finishAndRemoveTask() {
+    finishWasCalled = true;
+  }
+#end
+
   public void resetIsFinishing() {
     finishWasCalled = false;
   }
