--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAssetManager.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAssetManager.java.vm
@@ -23,6 +23,7 @@ import org.robolectric.res.ResName;
 import org.robolectric.res.ResType;
 import org.robolectric.res.ResourceIndex;
 import org.robolectric.res.ResourceLoader;
+import org.robolectric.res.builder.ResourceLoaderProvider;
 import org.robolectric.res.Style;
 import org.robolectric.res.StyleData;
 import org.robolectric.res.TypedResource;
@@ -705,6 +706,8 @@ public final class ShadowAssetManager {
       Attribute attribute = buildAttribute(set, attrs[i], defStyleAttr, themeResourceId, defStyleRes);
       if (attribute != null && !attribute.isNull()) {
         TypedValue typedValue = new TypedValue();
+        // If there is an AttributeSet then use the resource loader that the attribute set was created with.
+        ResourceLoader resourceLoader = set != null ? ((ResourceLoaderProvider) set).getResourceLoader() : this.resourceLoader;
         Converter.convertAndFill(attribute, typedValue, resourceLoader, RuntimeEnvironment.getQualifiers(), true);
         //noinspection PointlessArithmeticExpression
         data[offset + ShadowAssetManager.STYLE_TYPE] = typedValue.type;
