On calls to obtainStyledAttributes() first check the XML (AttributeSet) for resource ID values that match those requested in the int[] array.
This is because an App can read attributes available in the SDK it was compiled against even if it is running on an older device.

Add a test to verify this.

--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAssetManager.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAssetManager.java.vm
@@ -733,15 +733,16 @@ public final class ShadowAssetManager {
   }
 
   private Attribute findAttributeValue(int resId, AttributeSet attributeSet, Style styleAttrStyle, Style defStyleFromAttr, Style defStyleFromRes, Style theme, List<ShadowAssetManager.OverlayedStyle> overlayedStyles) {
-    ResName attrName = resourceLoader.getResourceIndex().getResName(resId);
-    if (attrName == null) return null;
-
     if (attributeSet != null) {
-      String attrValue = attributeSet.getAttributeValue(attrName.getNamespaceUri(), attrName.name);
-      if (attrValue != null) {
-        return new Attribute(attrName, attrValue, "fixme!!!");
+      for (int i = 0; i < attributeSet.getAttributeCount(); i++) {
+        if (attributeSet.getAttributeNameResource(i) == resId) {
+          return new Attribute(attributeSet.getAttributeName(i), attributeSet.getAttributeValue(i), "fixme!!!");
+        }
       }
     }
+
+    ResName attrName = resourceLoader.getResourceIndex().getResName(resId);
+    if (attrName == null) return null;
 
     if (styleAttrStyle != null) {
       Attribute attribute = styleAttrStyle.getAttrValue(attrName);
